--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,15 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: circleci/node:10.11
 
     steps:
       - checkout
 
       - run:
           name: Build
-          command: cat sampleoutput.txt
+          command: npm install
 
       - run:
           name: Test
-          command: echo "Not implemented" && exit 1
+          command: npm run test
